@@ -4,6 +4,8 @@ var setUpUtils = function () {
         isEquation: false
     };
 
+    this.presenter.isDraggable = true;
+
     var gap1 = {
         setState: function () {}
     };
@@ -84,5 +86,55 @@ TestCase("[Basic Math Gaps] [Gaps Container] Can send event", {
         this.stubs.getNonEmptyGapsNumber.returns(3);
 
         assertTrue(this.gapsContainer.canSendEvent());
+    }
+});
+
+var setUpUtilsNotDraggable = function () {
+    this.presenter = AddonBasic_Math_Gaps_create();
+    this.presenter.configuration = {
+        isEquation: false
+    };
+
+    this.presenter.isDraggable = false;
+
+    this.gap1 = {
+        $view: {val: sinon.stub()}
+    };
+
+    this.gap2 = {
+        $view: {val: sinon.stub()}
+    };
+
+    this.gap3 = {
+        $view: {val: sinon.stub()}
+    };
+    this.stubs = {
+        getNonEmptyGapsNumber: sinon.stub(this.presenter.GapsContainerObject.prototype, 'getNonEmptyGapsNumber')
+    };
+
+    this.gapsContainer = new this.presenter.GapsContainerObject();
+    this.gapsContainer._gaps.gap1 = this.gap1;
+    this.gapsContainer._gaps.gap2 = this.gap2;
+    this.gapsContainer._gaps.gap3 = this.gap3;
+
+    this.gapsContainer._gapsOrderArray = ["gap1", "gap2", "gap3"];
+
+    this.valuesArray = ["1", "2", "3"];
+    this.sourcesArray = ["source1", "source2", "source3"];
+
+    sinon.stub(this.gapsContainer, 'addGapFilled');
+};
+
+TestCase("[Basic Math Gaps] [Gaps Container] Set state when not draggable", {
+    setUp: setUpUtilsNotDraggable,
+    tearDown: tearDownUtils,
+
+    'test state should be set to all gaps': function () {
+
+        this.gapsContainer.setState(this.valuesArray, this.sourcesArray, this.droppedElementsArray);
+
+        assertTrue(this.gap1.$view.val.calledOnce);
+        assertTrue(this.gap1.$view.val.calledOnce);
+        assertTrue(this.gap1.$view.val.calledOnce);
     }
 });
